<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF" >

    <RadioGroup
        android:id="@+id/group_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#EEEEF9"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="6" >

        <RadioButton
            android:id="@+id/radio_treat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="17dp"
            android:layout_weight="2"
            android:background="@drawable/appoin_treat"
            android:button="@null"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/head_teat"
            android:textColor="@drawable/appoin_treat_text_color_select" />

        <RadioButton
            android:id="@+id/radio_agree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="17dp"
            android:layout_weight="2"
            android:background="@drawable/appoin_agree"
            android:button="@null"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/head_agree"
            android:textColor="@drawable/appoin_agree_text_color_select" />

        <RadioButton
            android:id="@+id/radio_refused"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/appoin_refuse"
            android:button="@null"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/head_refused"
            android:textColor="@drawable/appoin_refused_text_color_select" />
    </RadioGroup>

    <View
        android:id="@+id/appoin_cutline"
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:layout_below="@+id/group_state"
        android:background="#FFF" />

    <LinearLayout
        android:id="@+id/linear_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appoin_cutline"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:background="#DBDBEA"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:id="@+id/tv_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_order"
            android:textColor="#000" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/title_name"
            android:textColor="#000" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/title_time"
            android:textColor="#000" />

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/title_order"
            android:textColor="#DBDBEA" />
    </LinearLayout>

    <ListView
        android:id="@+id/appoin_treat_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linear_title"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:scrollingCache="false"
        android:cacheColorHint="#00000000"
        android:divider="#EEEEF1"
        android:dividerHeight="0.5px"
        android:scrollbars="none" />

</RelativeLayout>